
* IMPROVEMENTS and ENHANCEMENTS:
  - The zero equation turbulence models (zeroeq) have been added as new models
    to the freeflow folder.
  - Tests for coupling a turbulent free flow using zeroeq turbulence models
    with flow in a porous medium have been added.

* IMMEDIATE INTERFACE CHANGES not allowing/requiring a deprecation period:

* Deprecated PROPERTY and PARAMETER NAMES, to be removed after 2.8: BEWARE: The
  compiler will not print any warning if a deprecated property or parameter name
  is used. However, a run-time warning should appear in the summary lines after
  the corresponding run.

* Deprecated CLASSES/FILES, to be removed after 2.8:

* Deprecated MEMBER FUNCTIONS, to be removed after 2.8:
  - The method simulate(Scalar dtInitial, Scalar tEnd) from MultiDomainProblem,
    it is unused and wil be dropped.

* Deprecated protected MEMBER VARIABLES, to be removed after 2.8: BEWARE: Older
  compilers will not print any warning if a deprecated protected member variable
  is used.

* DELETED classes/files, property names, constants/enums,
  member functions, which have been deprecated in DuMuX 2.7:
  Everything listed as deprecated below has been removed.

Differences Between DuMuX 2.6 and DuMuX 2.7
===================================================

* IMPORTANT NOTES:
  - DuMuX 2.7 should work with DUNE 2.3 as well as 2.4. However, at the time of
    writing, DUNE-multidomain(grid) doesn't work with DUNE 2.4. Therefore, if a
    DuMuX multidomain model should be used, DUNE 2.3 is required. See
    test/multidomain/README for details.

  - The 2.3 branch of dune-alugrid has no CMake support, use dune-alugrid master
    respectivly 2.4. Or you can fall back to Autotools or use legacy ALUGrid
    1.52.

* IMPROVEMENTS and ENHANCEMENTS:
  - Since 2.6, all isothermal implicit porous-media models (except 2pdfm) can be
    easily enhanced with the energy equation. For 2.7, this has been also