@@ -63,7 +63,7 @@ namespace Dumux
  *
  *  Remark1: only for 2-D quadrilateral grid
  *
- *  Remark2: implemented for UGGrid, ALUGrid, or SGrid/YaspGrid
+ *  Remark2: implemented for UGGrid, ALUGrid, or YaspGrid
  *
  *\tparam TypeTag The problem Type Tag
  */
@@ -553,8 +553,7 @@ void FvMpfaL2dPressure2p<TypeTag>::initializeMatrix()
             // get 'nextIsIt'
             switch (GET_PROP_VALUE(TypeTag, GridImplementation))
             {
-            // for SGrid and YaspGrid
-            case GridTypeIndices::sGrid:
+            // for YaspGrid
             case GridTypeIndices::yaspGrid:
             {
                 if (nextIsIt == isEndIt)
@@ -650,8 +649,7 @@ void FvMpfaL2dPressure2p<TypeTag>::initializeMatrix()
             // get 'nextIsIt'
             switch (GET_PROP_VALUE(TypeTag, GridImplementation))
             {
-            // for SGrid and YaspGrid
-            case GridTypeIndices::sGrid:
+            // for YaspGrid
             case GridTypeIndices::yaspGrid:
             {
                 if (nextIsIt == isEndIt)
@@ -780,8 +778,7 @@ void FvMpfaL2dPressure2p<TypeTag>::storeInteractionVolumeInfo()
             //get isIt14
             switch (GET_PROP_VALUE(TypeTag, GridImplementation))
             {
-            // for SGrid and YaspGrid
-            case GridTypeIndices::sGrid:
+            // for YaspGrid
             case GridTypeIndices::yaspGrid:
             {
                 if (isIt14 == isIt12End)
