@@ -13,6 +13,8 @@ Differences Between DuMuX 2.7 and DuMuX 2.8
     with flow in a porous medium have been added.
 
 * IMMEDIATE INTERFACE CHANGES not allowing/requiring a deprecation period:
+  - The use and support for SGrid is dropped. SGrid is deprecated in Dune 2.4.
+    Use YaspGrid instead.
 
 * Deprecated PROPERTY and PARAMETER NAMES, to be removed after 2.8: BEWARE: The
   compiler will not print any warning if a deprecated property or parameter name
@@ -23,7 +25,7 @@ Differences Between DuMuX 2.7 and DuMuX 2.8
 
 * Deprecated MEMBER FUNCTIONS, to be removed after 2.8:
   - The method simulate(Scalar dtInitial, Scalar tEnd) from MultiDomainProblem,
-    it is unused and wil be dropped.
+    it is unused and will be dropped.
 
 * Deprecated protected MEMBER VARIABLES, to be removed after 2.8: BEWARE: Older
   compilers will not print any warning if a deprecated protected member variable
